# solarsystem-screensaver

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  debug_configure.in
doc/: Makefile.am  Makefile.in  README  README.compiling  README.xscreensaver
src/: Makefile.am  Makefile.in  solarsystem.c  solarsystem.h  solarsystem_models.h  solarsystem_textures.c  solarsystem_textures.h  solarsystem_timers.c  solarsystem_timers.h
src/gnome/: Makefile.am  Makefile.in  solarsystem.desktop
src/kde/: Makefile.in
src/textures/: Makefile.in
src_unreleased/: Makefile  Makefile.am  Makefile.in  README.TXT  solarsystem.c  solarsystem.h  solarsystem_models.h  solarsystem_random.h  solarsystem_textures.c  solarsystem_textures.h
src_unreleased/gnome/: Makefile  Makefile.in  solarsystem.desktop
src_unreleased/kde/: Makefile  Makefile.am  Makefile.in  solarsystem.desktop
src_unreleased/textures/: Makefile  Makefile.am  Makefile.in  rings.xcf
xscreensaver/: solarsystem.conf  solarsystem.xml
